  individually hard deprecated previously. The following have now been removed:
  - ApiTestCase::doLogin
  - All methods of the old SpecialPageFactory; the entire class was removed
* The global function `wfWaitForSlaves`, deprecated since 1.27 & hard-deprecated
  since 1.35, has been removed. Use LBFactory::waitForReplication() instead.
* The support for IE8 has been dropped.
* Less mixin `.background-image-svg-quick()` from mediawiki.mixins.less,
  deprecated since 1.35, has been removed.
* The ResourceLoader module `mediawiki.legacy.oldshared` and its file
  'oldshared.css', deprecated since 1.35 has been removed (T248357).
* …

=== Deprecations in 1.36 ===
* The User class, which was marked as @newable in 1.35, is no longer newable,
  meaning that it is no longer safe to manually call the constructor via
  `new User`. Instead, use the UserFactory service.
* …

=== Other changes in 1.36 ===
* …

== Compatibility ==
MediaWiki 1.36 requires PHP 7.2.22 or later, and the following PHP extensions:

* ctype
* dom
* fileinfo
* iconv
* json
* mbstring
* xml

MySQL/MariaDB is the recommended DBMS. PostgreSQL or SQLite can also be used,
but support for them is somewhat less mature.

The supported versions are:

* MySQL 5.5.8 or later
* PostgreSQL 9.2 or later
* SQLite 3.8.0 or later

== Online documentation ==
Documentation for both end-users and site administrators is available on
MediaWiki.org, and is covered under the GNU Free Documentation License (except
for pages that explicitly state that their contents are in the public domain):

       https://www.mediawiki.org/wiki/Special:MyLanguage/Documentation

== Mailing list ==
A mailing list is available for MediaWiki user support and discussion:

       https://lists.wikimedia.org/mailman/listinfo/mediawiki-l

A low-traffic announcements-only list is also available:

       https://lists.wikimedia.org/mailman/listinfo/mediawiki-announce

It's highly recommended that you sign up for one of these lists if you're