@@ -87,6 +87,9 @@ because of Phabricator reports.
   - All methods of the old SpecialPageFactory; the entire class was removed
 * The global function `wfWaitForSlaves`, deprecated since 1.27 & hard-deprecated
   since 1.35, has been removed. Use LBFactory::waitForReplication() instead.
+* The global variable $wgMemc, deprecated since 1.35, has been removed.
+  Usage should generally be migrated to WANObjectCache, or if you really need
+  the internal object, use ObjectCache::getLocalClusterInstance instead.
 * The support for IE8 has been dropped.
 * Less mixin `.background-image-svg-quick()` from mediawiki.mixins.less,
   deprecated since 1.35, has been removed.
